Fix scrollbar thumb drag cancellation in RTL mode

Fix scrollbar thumb drag cancellation in RTL mode
https://bugs.webkit.org/show_bug.cgi?id=250207

Reviewed by NOBODY (OOPS!).

This patch is to align WebKit with Blink / Chromium and Gecko / Firefox.

Merge - https://src.chromium.org/viewvc/blink?view=revision&revision=175100

Scrollbar stores original scroll position in non-negative scroll coordinates.
When sending those coordinates to ScrollableArea, they should be offsetted
with minimumScrollPosition() first.

* Source/WebCore/platform/Scrollbar.cpp:
(Scrollbar::mouseMoved): Update to take "minimumScrollPosition" in consideration while offsetting
* LayoutTests/fast/overflow/rtl-scroll-bar-drag-origin.html: Add Test Case
* LayoutTests/fast/overflow/rtl-scroll-bar-drag-origin-expected.txt: Add Test Case Expectation